# python-marshal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: load_string.rs
src/: code_objects.rs  error.rs  lib.rs  magic.rs  optimizer.rs  reader.rs  resolver.rs  writer.rs
tests/: integration_test.rs
tests/common/: mod.rs
